Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81257

Reg->5.15: Quick control2 gallery warns about No such signal QQmlObjectModel::itemPooled()

XMLWordPrintable

    • All
    • 4ad7a4d3dabea0c46872be2d6262a9c00e4e5079 (qt/qtdeclarative/5.15) 75ce6f3cd03362e6d763ae3bc21ab793a3675fce (qt/qtdeclarative/5.15)

      launching qtquickcontrols2/examples/quickcontrols2/gallery produces warnings:

      QObject::connect: No such signal QQmlObjectModel::itemPooled(int, QObject *) in items/qquickitemview.cpp:237
      QObject::connect: No such signal QQmlObjectModel::itemReused(int, QObject *) in items/qquickitemview.cpp:238
      QObject::connect: No such signal QQmlObjectModel::itemPooled(int, QObject *) in items/qquickitemview.cpp:237
      QObject::connect: No such signal QQmlObjectModel::itemReused(int, QObject *) in items/qquickitemview.cpp:238
      QObject::connect: No such signal QQmlObjectModel::itemPooled(int, QObject *) in items/qquickitemview.cpp:237
      QObject::connect: No such signal QQmlObjectModel::itemReused(int, QObject *) in items/qquickitemview.cpp:238
      

      Apparently related to the changes around " QQmlTableInstanceModel: factor out reuse pool" 4b58d69d56c5876a1b1d71ce6a96b4c6c81a833f https://codereview.qt-project.org/c/qt/qtdeclarative/+/282545

      Also, when scrolling the drawer down by mouse wheel:

      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      qrc:/gallery.qml:156: TypeError: Cannot read property 'width' of null
      

      This might be related?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes